--- a/PictureCompressWeb/PictureCompressWeb.csproj
+++ b/PictureCompressWeb/PictureCompressWeb.csproj
@@ -20,6 +20,13 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <MvcProjectUpgradeChecked>true</MvcProjectUpgradeChecked>
+    <FileUpgradeFlags>
+    </FileUpgradeFlags>
+    <UpgradeBackupLocation>
+    </UpgradeBackupLocation>
+    <OldToolsVersion>12.0</OldToolsVersion>
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -242,6 +249,7 @@
     <Content Include="Fonts\iconfont.ttf" />
     <Content Include="Fonts\iconfont.woff" />
     <None Include="Properties\PublishProfiles\compressweb.pubxml" />
+    <None Include="Properties\PublishProfiles\piccompress.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Images\close.png" />
     <Content Include="Images\grid.png" />
